--- a/css/agency.css
+++ b/css/agency.css
@@ -337,6 +337,8 @@ section h3.section-subheading {
     font-size: 16px;
     font-style: italic;
     font-weight: 400;
+    margin-right: 95px;
+    margin-left: 109px;
 }
 
 @media(min-width:768px) {
